# napari-foobar

./: LICENSE  README.md  setup.cfg  tox.ini
napari-hello/: setup.cfg
napari-hello/napari_hello/: __init__.py  napari.yaml
src/napari_foobar/: napari.yaml
src/napari_foobar/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
